sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:66: error: not found: value cherchePasjoueur
    deplace(currBase, cherchePasjoueur(couleur, currTrou));
                      ^